<resources>
    <string name="app_name">VITTY</string>
    <string name="active_background">Active period background</string>
    <string name="exp_background">Expanded background</string>
    <string name="sample_course">Java Programming - ELA</string>
    <string name="sample_time">8:00 AM - 9:40 AM</string>
    <string name="down_arrow">Down arrow</string>
    <string name="sample_slot">L35 + L36</string>
    <string name="sample_class_id">SJT 304</string>
    <string name="next">Next</string>
    <string name="greeting">Hello,</string>
    <string name="done">Done</string>
    <string name="no_classes_today">No classes today!</string>
    <string name="no_more_classes_today">No More Classes Today</string>
    <string name="no_classes_today_subtext">Catch up on some sleep</string>
    <string name="intro1_title">Never miss a class</string>
    <string name="intro1_subtitle">Notifications to remind you about your upcoming classes</string>
    <string name="intro2_title">Get a sneak peek</string>
    <string name="intro2_subtitle">View your upcoming classes and timetable via the widget</string>
    <string name="intro3_title">Upload once, view everywhere</string>
    <string name="intro3_subtitle">Instant sync across all of your devices via the app and extension</string>
    <string name="todo">TODO</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="your_next_class">Your Next Class</string>
    <string name="today_schedule">Today\'s Schedule</string>
    <string name="share">Share</string>
    <string name="share_text">Are you having trouble staying on top of your hectic college schedule? Don\'t know where your classes are? VITTY has got you covered, with VITTY you can have easy access to your timetable no matter where you are!\n\nSimply upload your VIT timetable as text or image and never miss another class again!\n\nGet VITTY Now!\n\nWebsite: https://dscv.it/vitty\n\nChrome Extension: https://dscv.it/vitty-extension\n\nAndroid App: https://dscv.it/vitty-app\n\niOS App: https://dscv.it/vitty-ios</string>
    <string name="instructions_1">1. Upload the timetable on:</string>
    <string name="instructions_1_link"><u>https://dscv.it/vitty</u></string>
    <string name="instructions_2">2. Log in with the same account as shown above.</string>
    <string name="instructions_3">3. Follow the instructions and upload your timetable.</string>
    <string name="instructions_3_a">\u25CB Ensure that the screenshot is taken directly from VTOP. It should fit in one single image.</string>
    <string name="instructions_3_b">\u25CB DO NOT upload a screenshot that has been compressed or sent through social media.</string>
    <string name="instructions_4">4. Review it.</string>
    <string name="instructions_4_a">\u25CB Individual slot data can be edited by clicking on the edit button.</string>
    <string name="instructions_4_b">\u25CB If unsatisfied, click on the three dots and select Upload as Text.</string>
    <string name="instructions_5">5. When done, click on Confirm.</string>
    <string name="instructions_6">BRAVO! That\'s it. You did it!</string>
    <string name="instructions_7">In addition to this, you can have a sneak peek at your upcoming classes via the Widget.</string>
    <string name="logout">Logout</string>
    <string name="logout_msg">Are you sure?</string>
    <string name="cancel">Cancel</string>
    <string name="notifications">Notifications</string>
    <string name="sign_in_fail">Google sign in failed :(</string>
    <string name="follow_instructions">Please follow the instructions!</string>
    <string name="updated">Updating…</string>
    <string name="battery">Battery</string>
    <string name="nav">Navigation</string>
    <string name="new_updates">What\'s New?</string>
    <string name="account_details">Account Details</string>
    <string name="notif_group">Courses</string>
    <string name="complete_msg">You have successfully set up your timetable! You deserve a pat on your back!</string>
    <string name="skip">Skip</string>
    <string name="widgets">Widgets</string>
    <string name="about_widgets">Go to your home screen, long press and add widget!\n\nYou have two widgets to choose from:\n1. Today\'s Schedule: This shows your current day\'s classes.\n2. Next class: This gives you the details about your next upcoming class.</string>
    <string name="about_notifications">Get control of the notifications by tapping on ⋮ > Settings > Notifications.\n\nThere you can:\n1. Turn on Exam/Holiday Mode to pause your class notifications.\n2. Individually turn on/off notifications for your classes (Android 8+ only).</string>
    <string name="about_battery">To get notifications on time, keep the battery optimisations for the app turned off.\n\nTo change this setting, tap on ⋮ > Settings > Battery.</string>
    <string name="about_nav">Don\'t know which class is where? Don\'t worry, we\'ve got you covered!\n\nNow you can hit the directions button on the Next Class widget or tap on a room number in the app to start navigation to your class!</string>
    <string name="about_new_updates">1.  Introducing Class Navigation - Get directions to your class in one click!\n2. Have a class on Saturday? No problem! Go to settings and select your timetable order!\n3. Quick settings tile added to easily turn on/off exam/holiday mode.\n4. Minor UI changes and bug fixes.</string>
    <string name="final_heading">Let\'s go!</string>
    <string name="about_final">You\'re all set to start using the app.</string>
    <string name="congratulations">Congratulations!</string>
    <string name="title_instructions">Setup Instructions</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_today_schedule">Today\'s Schedule</string>
    <string name="settings">Settings</string>
    <string name="title_next_class">Next Class</string>
    <string name="close">Close</string>
    <string name="exam_mode_summary_off">Turns off class notifications</string>
    <string name="exam_mode_summary_on">Class notifications turned off</string>
    <string name="exam_mode">Exam/Holiday Mode</string>
    <string name="ind_notif_summary">Turn on/off individual class\' notifications</string>
    <string name="ind_notif">Notification Settings</string>
    <string name="battery_summary">Turn off battery optimizations to receive notifications on time</string>
    <string name="battery_opt">Battery Optimizations</string>
    <string name="github_repo">GitHub Repository</string>
    <string name="gdscvit">GDSC VIT</string>
    <string name="exam_mode_alert">Exam/Holiday Mode Turned On</string>
    <string name="default_notification_channel_name">Updates</string>
    <string name="default_notification_channel_id">con.dscvit.vitty-Updates</string>
    <string name="directions">Directions</string>
    <string name="facing_issues_title">Facing any issues? Contact us!</string>
    <string name="facing_issues_description">We are available on Telegram throughout the day ready to fix your problems!</string>
    <string name="telegram_link"><u>https://dscv.it/telegram</u></string>
    <string name="support">Support</string>
    <string name="sample_room">SJT101</string>
    <string-array name="no_classes_today_subtext_list">
        <item>Don\'t you have a quiz coming up?</item>
        <item>Finish your DAs!</item>
        <item>Chill and relax in hostel</item>
        <item>Let\'s chill at Foodys!</item>
        <item>Ready to run to Tarama?</item>
        <item>Do grocery shopping at Allmart</item>
    </string-array>
    <string-array name="no_classes_today_subtext_list_online">
        <item>Don\'t you have a quiz coming up?</item>
        <item>Finish your DAs!</item>
        <item>Read a book</item>
        <item>Catch up on some sleep</item>
    </string-array>
    <string-array name="sat_order">
        <item>No Class</item>
        <item>Monday Order</item>
        <item>Tuesday Order</item>
        <item>Wednesday Order</item>
        <item>Thursday Order</item>
        <item>Friday Order</item>
    </string-array>
    <string-array name="sat_order_values">
        <item>saturday</item>
        <item>monday</item>
        <item>tuesday</item>
        <item>wednesday</item>
        <item>thursday</item>
        <item>friday</item>
    </string-array>
</resources>
