<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/widget_background"
    android:padding="@dimen/widget_margin"
    android:theme="@style/ThemeOverlay.VITTY.AppWidgetContainer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/widget_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingStart="20dp"
                android:paddingTop="15dp"
                android:paddingEnd="0dp"
                android:text="@string/your_next_class"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:contentDescription="@string/todo"
                android:paddingStart="0dp"
                android:paddingTop="15dp"
                android:paddingEnd="20dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_vitty" />

        </LinearLayout>


        <LinearLayout
            android:id="@+id/class_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:background="@drawable/next_class_background"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/course_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/poppins_600"
                android:paddingStart="25dp"
                android:paddingEnd="30dp"
                android:text="@string/no_more_classes_today"
                android:textColor="@color/white"
                android:textSize="16sp"
                tools:text="@string/sample_course" />


            <LinearLayout
                android:id="@+id/more_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingStart="25dp"
                android:paddingEnd="25dp">

                <TextView
                    android:id="@+id/period_time"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/no_classes_today_subtext"
                    android:textSize="15sp"
                    tools:text="@string/sample_time" />

                <TextView
                    android:id="@+id/class_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:textSize="13sp"
                    tools:text="@string/sample_class_id" />
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

</RelativeLayout>

