<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp">

    <ImageView
        android:id="@+id/illustration"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:adjustViewBounds="true"
        android:contentDescription="@string/todo"
        android:scaleType="fitCenter"
        android:src="@drawable/get_notified" />

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-30dp"
        android:fontFamily="@font/poppins_600"
        android:gravity="center"
        android:text="@string/intro1_title"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:fontFamily="@font/poppins_500"
        android:gravity="center"
        android:text="@string/intro1_subtitle"
        android:textSize="18sp" />


</LinearLayout>