<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/tab_back"
        app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="20dp"
            android:paddingVertical="14dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_600"
                android:text="@string/congratulations"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="22dp"
                android:layout_marginBottom="10dp"
                android:lineSpacingExtra="6dp"
                android:text="@string/complete_msg"
                android:textColor="@color/translucent_imp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/skip"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="1"
                    android:letterSpacing="0"
                    android:padding="10dp"
                    android:text="@string/skip"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:rippleColor="@color/translucent"
                    app:strokeColor="@color/next_class" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/next"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:backgroundTint="@color/next_class"
                    android:letterSpacing="0"
                    android:padding="10dp"
                    android:text="@string/next"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />


            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>