<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable

            name="periodDetails"
            type="com.dscvit.vitty.model.PeriodDetails">

        </variable>

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="7dp"
        android:animateLayoutChanges="true"
        app:cardBackgroundColor="@color/tab_back"
        app:cardCornerRadius="14dp"
        app:cardElevation="0dp"
        app:rippleColor="@android:color/transparent">

        <ImageView
            android:id="@+id/expanded_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/exp_background"
            android:src="@drawable/expanded_background"
            android:visibility="invisible" />

        <ImageView
            android:id="@+id/active_period"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.6"
            android:contentDescription="@string/active_background"
            android:src="@drawable/next_class_background"
            android:visibility="invisible" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="25dp"
            android:paddingTop="22dp"
            android:paddingEnd="22dp"
            android:paddingBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/course_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_600"
                        android:text="@={periodDetails.courseName}"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        tools:text="@string/sample_course" />

                    <TextView
                        android:id="@+id/course_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:alpha="0.9"
                        android:text='@={periodDetails.courseCode}'
                        android:textSize="11sp"
                        android:visibility="gone"
                        tools:text="@string/sample_course" />

                    <TextView
                        android:id="@+id/period_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:text=""
                        android:textSize="15sp"
                        tools:text="@string/sample_time" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/arrow_more_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="15dp"
                    android:contentDescription="@string/down_arrow"
                    android:src="@drawable/ic_down_arrow"
                    app:tint="?android:text" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/more_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="gone"
                tools:visibility="visible">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <!--                    <TextView-->
                    <!--                        android:id="@+id/course_code"-->
                    <!--                        android:layout_width="wrap_content"-->
                    <!--                        android:layout_height="wrap_content"-->
                    <!--                        android:text='@{"Code: "+periodDetails.courseCode}'-->
                    <!--                        android:textSize="11sp"-->
                    <!--                        tools:text="@string/sample_course" />-->

                    <TextView
                        android:id="@+id/slot_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text='@={periodDetails.slot}'
                        tools:text="@string/sample_slot" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/class_nav"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="3dp"
                    android:alpha="0.8"
                    android:background="@drawable/nav_button_background"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:paddingStart="8dp"
                    android:paddingTop="1.5dp"
                    android:paddingEnd="2dp"
                    android:paddingBottom="1.5dp">

                    <TextView
                        android:id="@+id/class_id"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:text="@={periodDetails.roomNo}" />

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:contentDescription="@string/directions"
                        android:src="@drawable/ic_nav"
                        app:tint="@color/background" />

                </LinearLayout>


                <TextView
                    android:id="@+id/class_id_online"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:text="@={periodDetails.roomNo}"
                    android:visibility="gone" />

            </LinearLayout>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>
